--- a/client/components/Footer/Footer.module.scss
+++ b/client/components/Footer/Footer.module.scss
@@ -5,7 +5,7 @@
   @apply  w-full h-24
           flex flex-row justify-between items-center
           px-3 mt-8
-          sticky bottom-0
+          fixed bottom-0
   ;
 
   .iconHome{
