Changed Styling of Loading Page
Loading page found to nest itself within other components, now set to sit on top of page

--- a/client/components/Loading/Loading.module.scss
+++ b/client/components/Loading/Loading.module.scss
@@ -5,7 +5,9 @@
   width: 100%;
   background-color: $colPrimary;
 
-  @apply pt-32;
+  @apply  pt-32 w-full
+          absolute top-0
+  ;
 
   .logo {
     @apply w-7/12 aspect-square mx-auto mb-10;
