--- a/client/styles/account/Account.module.scss
+++ b/client/styles/account/Account.module.scss
@@ -35,12 +35,12 @@
       ;
     }
 
-    input:is([disabled]){
+    input:is([readOnly]){
       @apply  text-gray-400
       ;
     }
 
-    input:not([disabled]){
+    input:not([readOnly]){
       // @apply  border-2 border-gray-500 
       // ;
     }
