--- a/client/components/Nav/Nav.module.scss
+++ b/client/components/Nav/Nav.module.scss
@@ -17,6 +17,7 @@ $transitionSpeed: 0.5s;
   background: rgba($colPrimary, 0.64);
   backdrop-filter: blur(4px);
   margin-left: -0.75rem;
+  overflow-y: scroll;
   @apply  z-50 absolute
           w-full 
           flex flex-col items-center
