--- a/client/styles/games/coupon/index.module.scss
+++ b/client/styles/games/coupon/index.module.scss
@@ -37,10 +37,65 @@
       }
     }
 
+    .errorContainer {
+      @apply  w-9/12
+              mx-auto my-2
+              text-center
+              rounded-lg
+              border-2
+      ;
+      &[data-deadline='true']{
+        @apply  bg-amber-100
+                border-amber-700
+        ;
+      }
+      &[data-status='200'] {
+        @apply  border-green-700
+                bg-green-100
+                ;
+      }
+      &[data-status='400']{
+        @apply  border-red-700
+                bg-red-100
+        ;
+      }
+      &[data-status='500']{
+        @apply  border-red-700
+                bg-red-100
+        ;
+      }
+
+      .errorHeader {
+        @apply  underline
+                font-semibold
+        ;
+      }
+
+      .errorBody {
+        @apply  font-light
+        ;
+      }
+    }
+
     .matchForm {
       @apply  w-11/12
               mx-auto
+              text-center
       ;
+
+      .btnSubmit {
+        @apply  px-2 py-1 mt-3
+                w-5/12
+                border rounded-full
+                bg-green-900
+                text-white font-semibold
+        ;
+        &:disabled {
+          @apply  bg-red-900
+                  text-gray-400
+          ;
+        }
+      }
     }
   }
 }
