--- a/client/styles/games/coupon/index.module.scss
+++ b/client/styles/games/coupon/index.module.scss
@@ -37,6 +37,23 @@
       }
     }
 
+    .deadline{
+      @apply  flex flex-col
+              text-center
+              bg-gray-200
+              pb-1
+      ;
+
+      .deadlineHeader {
+        @apply  underline
+        ;
+      }
+
+      .deadlineBody {
+        @apply  font-light
+      }
+    }
+
     .errorContainer {
       @apply  w-9/12
               mx-auto my-2
