--- a/client/styles/Home.module.scss
+++ b/client/styles/Home.module.scss
@@ -1,4 +1,45 @@
 .container {
-  @apply py-28
-  ;
+  @apply py-24;
+
+  .txtHeader {
+    @apply text-center text-3xl
+            underline
+            my-2;
+  }
+
+  .body {
+    .bodyHeader {
+      @apply text-center underline text-xl
+      mt-4;
+    }
+    .quickLinks {
+      @apply w-4/5 mx-auto py-6
+        grid grid-cols-2 gap-8;
+
+      .gameButton {
+        @apply w-full aspect-square mx-auto
+              relative -z-10
+              rounded-2xl
+              bg-green-900
+              text-white
+              bg-cover
+              text-2xl
+              font-bold;
+      }
+      .btnOdd span {
+        @apply text-left absolute top-3 left-3;
+      }
+      .btnEven span {
+        @apply text-right absolute bottom-3 right-3;
+      }
+
+      #coupon {
+        background-image: url("../assets/shared/coupon.png");
+      }
+
+      #account {
+        background-image: url("../assets//shared/user.svg");
+      }
+    }
+  }
 }
