--- a/client/components/Layout/Header/AccountPopover/AccountPopover.module.scss
+++ b/client/components/Layout/Header/AccountPopover/AccountPopover.module.scss
@@ -1,10 +1,12 @@
 @import "../../../../styles/variables";
 
 .container[data-status="true"] {
-  @apply block;
+  transition: 0.3s;
 }
 .container[data-status="false"] {
-  @apply hidden;
+  @apply -translate-y-96;
+  transition: 0.3s;
+  @apply invisible;
 }
 
 .container {
@@ -24,11 +26,6 @@
             border-2 border-gray-400
             rounded-lg;
 
-    .iconClose {
-      @apply mx-auto
-              aspect-square w-1/4;
-    }
-
     *:nth-child(n) {
       @apply p-2
               text-lg font-medium;
@@ -36,6 +33,10 @@
       &:hover {
         @apply underline;
       }
+    }
+    .iconClose {
+      @apply mx-auto p-0
+              aspect-square w-5/12;
     }
   }
 }
