--- a/client/components/Layout/Header/Header.module.scss
+++ b/client/components/Layout/Header/Header.module.scss
@@ -24,6 +24,22 @@
         @media (prefers-color-scheme: light) {
           background-color: $colTertiary;
         }
+        &[data-status="false"] {
+          transition: 0.3s;
+        }
+      }
+
+      .iconB1[data-status="true"] {
+        @apply rotate-45 translate-y-3 translate-x-1;
+        transition: 0.3s;
+      }
+      .iconB2[data-status="true"] {
+        @apply hidden;
+        transition: 0.3s;
+      }
+      .iconB3[data-status="true"] {
+        @apply -rotate-45 -translate-y-2.5 translate-x-1;
+        transition: 0.3s;
       }
     }
   }
